added more hire-me abilities and learning color scheme

--- a/hire-me.html
+++ b/hire-me.html
@@ -18,6 +18,9 @@ permalink: /hire-me/
 			<li class="ability-ui">UI Design</li>
 			<li class="ability-html">HTML5</li>
 			<li class="ability-css">CSS3 / SASS</li>
+			<li class="ability-js">JS/JQuery</li>
+			<li class="ability-meteor learning">Meteor</li>
+			<li class="ability-react learning">React</li>
 			<li class="ability-git">GIT</li>
 			<li class="ability-jekyll">Jekyll / Template-toolkits</li>
 			<li class="ability-webservice">Webservices / RESTful APIs</li>
