First attempt at adding jquery to jekyll project

--- a/index.html
+++ b/index.html
@@ -45,3 +45,18 @@ layout: default
 </section>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+    $(".title").lettering();
+  });
+
+  $(document).ready(function() {
+    var title1 = new TimelineMax();
+  title1.staggerFromTo(".title span", 0.5, 
+    {ease: Back.easeOut.config(1.7), opacity: 0, bottom: -80},
+    {ease: Back.easeOut.config(1.7), opacity: 1, bottom: 0}, 0.05);
+  }, 1000);
+</script>
