--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ layout: default
 
 </div>
 
-<script src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
 
 <script>
     $(document).ready(function() {
