--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ layout: default
   <h1>Featured Projects</h1>
   <ul class="project-list">
     {% for project in site.categories['project'] reversed | limit: 3 %}
-      {% include project.html %}
+      {% if project.feature == true %}
+        {% include project.html %}
+      {% endif %}
     {% endfor %}
   </ul>
 </section>
